@@ -9,22 +9,22 @@ import org.fytyny.dirdrive.service.ApiKeyService;
 import org.fytyny.dirdrive.service.DirectoryService;
 import org.fytyny.dirdrive.service.ResponseService;
 import org.fytyny.dirdrive.service.SessionService;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.ArgumentMatcher;
+
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.mockito.runners.MockitoJUnitRunner;
-import org.mockito.stubbing.Answer;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import javax.transaction.*;
 import javax.ws.rs.core.Response;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.InputStream;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
@@ -34,11 +34,10 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyObject;
 import static org.mockito.Mockito.*;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class DirectoryControllerTest {
 
     private final static String SESSION_TOKEN = "Working token";
@@ -61,50 +60,55 @@ public class DirectoryControllerTest {
     @Spy
     DirectoryController directoryController;
 
-    @Before
+    File gitignoreFile;
+
+    @BeforeEach
     public void before(){
         directoryController.sessionService =sessionService;
         directoryController.apiKeyService =apiKeyService;
         directoryController.directoryService = directoryService;
         ApiKey apiKey = new ApiKey();
         apiKey.setToken(API_TOKEN);
+        gitignoreFile = new File("..//.gitignore");
 
         Directory realDirectory = new Directory();
         realDirectory.setLabel("main");
         realDirectory.setPath(new File(new File("").getAbsolutePath()).getParentFile().getAbsolutePath());
 
-        apiKey.setDirectoryList(Arrays.asList(realDirectory));
+        apiKey.setDirectoryList(List.of(realDirectory));
 
         when(apiKeyService.getApiKeyBySession(SESSION_TOKEN)).thenReturn(apiKey);
 
         Session session = getSession(SESSION_TOKEN, apiKeyService.getApiKeyBySession(SESSION_TOKEN));
 
         when(sessionService.getSessionByToken(SESSION_TOKEN)).thenReturn(session);
-        responseService = mock(ResponseService.class, (Answer)  a ->{
+        responseService = mock(ResponseService.class, a ->{
             throw new IllegalStateException();
         });
         directoryController.responseService = responseService;
         directoryController.userTransaction = userTransaction;
+
+
     }
 
     @Test
     public void shouldNotAddDirectoryWhenWrongSession() throws HeuristicRollbackException, HeuristicMixedException, NotSupportedException, RollbackException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
-        }).when(responseService).error(anyObject(),eq(401));
+        }).when(responseService).error(any(),eq(401));
         DirectoryDTO directoryDTO = new DirectoryDTO();
         directoryDTO.setPath("c:/windows");
 
         Response wrong = directoryController.addDir(API_TOKEN, "wrong", directoryDTO);
-        Assert.assertNull(wrong);
+        Assertions.assertNull(wrong);
 
     }
 
     @Test
     public void shouldNotAddDirectoryWhenNullSession() throws HeuristicRollbackException, HeuristicMixedException, NotSupportedException, RollbackException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
 
@@ -112,13 +116,13 @@ public class DirectoryControllerTest {
         directoryDTO.setPath("c:/windows");
 
         Response wrong = directoryController.addDir(API_TOKEN, null, directoryDTO);
-        Assert.assertNull(wrong);
+        Assertions.assertNull(wrong);
     }
 
     @Test
     public void shouldNotAddDirectoryWhenWrongApiKey() throws HeuristicRollbackException, HeuristicMixedException, NotSupportedException, RollbackException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
 
@@ -126,12 +130,12 @@ public class DirectoryControllerTest {
         directoryDTO.setPath("c:/windows");
 
         Response wrong = directoryController.addDir("wrong", SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(wrong);
+        Assertions.assertNull(wrong);
     }
     @Test
     public void shouldNotAddDirectoryWhenNullApiKey() throws HeuristicRollbackException, HeuristicMixedException, NotSupportedException, RollbackException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
 
@@ -139,13 +143,13 @@ public class DirectoryControllerTest {
         directoryDTO.setPath("c:/windows");
 
         Response wrong = directoryController.addDir(null, SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(wrong);
+        Assertions.assertNull(wrong);
     }
 
     @Test
     public void shouldAddDitectoryWhenSessionAndKeyOk() throws HeuristicRollbackException, HeuristicMixedException, NotSupportedException, RollbackException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).success(any());
 
@@ -153,99 +157,92 @@ public class DirectoryControllerTest {
         directoryDTO.setPath("c:/windows");
 
         Response right = directoryController.addDir(API_TOKEN, SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(right);
+        Assertions.assertNull(right);
 
-        verify(directoryService).addDirectoryToApiKey(argThat(new ArgumentMatcher<Directory>() {
-            @Override
-            public boolean matches(Object o){
-                if (!(o instanceof Directory)) return false;
-                return ((Directory) o).getPath().equals(directoryDTO.getPath());
-            }
-        }),any());
+        verify(directoryService).addDirectoryToApiKey(argThat(o->o.getPath().equals(directoryDTO.getPath())),any());
     }
 
     @Test
     public void shouldReturnDirectoryList() throws NotSupportedException, SystemException {
         ApiKey apiKeyBySession = apiKeyService.getApiKeyBySession(SESSION_TOKEN);
         List<Directory> directoryList = generateRandomDirList();
-        Assert.assertFalse(directoryList.isEmpty());
+        Assertions.assertFalse(directoryList.isEmpty());
         apiKeyBySession.setDirectoryList(directoryList);
 
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof DirectoryListDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof DirectoryListDTO);
             DirectoryListDTO directoryListDTO = (DirectoryListDTO) a.getArguments()[0];
-            List<DirectoryDTO> collect = directoryList.stream().map(d -> {
-                return DirectoryDTO.getFrom(d);
-            }).collect(Collectors.toList());
-            Assert.assertTrue(directoryListDTO.getDirectoryList().containsAll(collect));
+            List<DirectoryDTO> collect = directoryList.stream().map(DirectoryDTO::getFrom)
+                    .collect(Collectors.toList());
+            Assertions.assertTrue(directoryListDTO.getDirectoryList().containsAll(collect));
             return null;
         }).when(responseService).success(any());
         directoryController.responseService = responseService;
 
-        Assert.assertNull(directoryController.getAllDirs(SESSION_TOKEN));
+        Assertions.assertNull(directoryController.getAllDirs(SESSION_TOKEN));
     }
 
     @Test
     public void shouldNotReturnDirectoryList() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
         directoryController.responseService = responseService;
 
-        Assert.assertNull(directoryController.getAllDirs(API_TOKEN));
+        Assertions.assertNull(directoryController.getAllDirs(API_TOKEN));
     }
 
     @Test
     public void shouldReturnReturnFileListResponse() throws NotSupportedException, SystemException {
         ApiKey apiKeyBySession = apiKeyService.getApiKeyBySession(SESSION_TOKEN);
         Directory directory = apiKeyBySession.getDirectoryList().get(0);
-        Assert.assertNotNull(directory);
+        Assertions.assertNotNull(directory);
         doAnswer(a->{
-            Assert.assertTrue(a.getArguments()[0] instanceof FileListResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof FileListResponseDTO);
             FileListResponseDTO fileListResponseDTO = (FileListResponseDTO) a.getArguments()[0];
             Set<FileDTO> fileDTOList = fileListResponseDTO.getFileDTOSet();
             Pattern pattern = Pattern.compile("[0-3][0-9]-[0-1][0-9]-[0-9]{4} [0-2][0-9]:[0-5][0-9]:[0-5][0-9]");
             fileDTOList.forEach(e->{
-                Assert.assertNotNull(e.getModifyDate());
-                Assert.assertNotNull(e.getName());
-                Assert.assertFalse(e.getName().isEmpty());
-                Assert.assertTrue(e.getModifyDate().matches(pattern.pattern()));
+                Assertions.assertNotNull(e.getModifyDate());
+                Assertions.assertNotNull(e.getName());
+                Assertions.assertFalse(e.getName().isEmpty());
+                Assertions.assertTrue(e.getModifyDate().matches(pattern.pattern()));
             });
-            Assert.assertTrue(fileDTOList.containsAll(fileDTOS(directory.getPath())));
+            Assertions.assertTrue(fileDTOList.containsAll(fileDTOS(directory.getPath())));
             return null;
         }).when(responseService).success(any());
         when(directoryService.getFilesOfDir(directory,sessionService.getSessionByToken(SESSION_TOKEN))).thenReturn(
-                Arrays.stream(new File(directory.getPath()).listFiles()).filter(f->!f.isDirectory()).collect(Collectors.toList())
+                Arrays.stream(Objects.requireNonNull(new File(directory.getPath()).listFiles())).filter(f->!f.isDirectory()).collect(Collectors.toList())
         );
 
         Response response = directoryController.getDir(SESSION_TOKEN, DirectoryDTO.getFrom(apiKeyBySession.getDirectoryList().get(0)));
-        Assert.assertNull(response);
+        Assertions.assertNull(response);
     }
 
     @Test
     public void shouldNotReturnReturnFileListWhenDirectoryIsNotInApiKey() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             GeneralResponseDTO generalResponseDTO = (GeneralResponseDTO) a.getArguments()[0];
-            Assert.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
+            Assertions.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
             return null;
         }).when(responseService).error(any(),eq(400));
 
         DirectoryDTO directoryDTO = new DirectoryDTO();
         directoryDTO.setLabel("main");
-        directoryDTO.setPath("C:\\Windows");
+        directoryDTO.setPath("C:\\adawd");
 
         Response response = directoryController.getDir(SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(response);
+        Assertions.assertNull(response);
     }
 
     @Test
     public void shouldNotReturnReturnFileListWhenDirectoryIsNotInApiKey2() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             GeneralResponseDTO generalResponseDTO = (GeneralResponseDTO) a.getArguments()[0];
-            Assert.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
+            Assertions.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
             return null;
         }).when(responseService).error(any(),eq(400));
 
@@ -254,14 +251,14 @@ public class DirectoryControllerTest {
         directoryDTO.setPath(null);
 
         Response response = directoryController.getDir(SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(response);
+        Assertions.assertNull(response);
     }
     @Test
     public void shouldNotReturnReturnFileListWhenDirectoryIsNotInApiKey3() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             GeneralResponseDTO generalResponseDTO = (GeneralResponseDTO) a.getArguments()[0];
-            Assert.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
+            Assertions.assertTrue(generalResponseDTO.getMessage().contains("Could not find directory"));
             return null;
         }).when(responseService).error(any(),eq(400));
         DirectoryDTO directoryDTO = new DirectoryDTO();
@@ -269,35 +266,31 @@ public class DirectoryControllerTest {
         directoryDTO.setPath(new File("").getAbsolutePath());
 
         Response response = directoryController.getDir(SESSION_TOKEN, directoryDTO);
-        Assert.assertNull(response);
+        Assertions.assertNull(response);
     }
     @Test
     public void shouldNotReturnFileListSessionWrong() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
 
         DirectoryDTO directoryDTO = DirectoryDTO.getFrom(apiKeyService.getApiKeyBySession(SESSION_TOKEN).getDirectoryList().get(0));
         Response response = directoryController.getDir(SESSION_TOKEN + "sfsf", directoryDTO);
-        Assert.assertNull(response);
+        Assertions.assertNull(response);
     }
 
 
     @Test
     public void shouldGetSingleFile() throws NotSupportedException, SystemException {
         doAnswer(a->{
-            Assert.assertTrue(a.getArguments()[0] instanceof FileInputStream);
-
-            FileInputStream file = (FileInputStream) a.getArguments()[0];
-
+            Assertions.assertTrue(a.getArguments()[0] instanceof FileInputStream);
             return null;
         }).when(responseService).success(any());
-
-        FileDTO fileDTO = new FileDTO(".gitignore","26-01-2019 19:27:42");
+        FileDTO fileDTO = new FileDTO(gitignoreFile.getName(),directoryController.getDateFromModDate(gitignoreFile.lastModified()));
         when(directoryService.getSingleFile(any(),any(),any())).thenAnswer(a->{
-            Directory argumentAt = a.getArgumentAt(1, Directory.class);
-            return Optional.of(new File(argumentAt.getPath() + File.separator + a.getArgumentAt(0,String.class)));
+            Directory argumentAt = a.getArgument(1, Directory.class);
+            return Optional.of(new File(argumentAt.getPath() + File.separator + a.getArgument(0,String.class)));
         });
         FileRequest fileRequest = new FileRequest();
         fileRequest.setFileDTO(fileDTO);
@@ -306,18 +299,18 @@ public class DirectoryControllerTest {
     }
 
     @Test
-    public void shouldNotGetSingleFileDateWrong() throws NotSupportedException, SystemException {
+    public void shouldNotGetSingleIfFileModDateWrong() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             GeneralResponseDTO generalResponseDTO = (GeneralResponseDTO) a.getArguments()[0];
-            Assert.assertTrue(generalResponseDTO.getMessage().contains("Could not find file"));
+            Assertions.assertTrue(generalResponseDTO.getMessage().contains("Could not find file"));
             return null;
         }).when(responseService).error(any(),eq(400));
 
-        FileDTO fileDTO = new FileDTO(".gitignore","28-12-2017 00:15:27");
+        FileDTO fileDTO = new FileDTO(gitignoreFile.getName(),directoryController.getDateFromModDate(0));
         when(directoryService.getSingleFile(any(),any(),any())).thenAnswer(a->{
-            Directory argumentAt = a.getArgumentAt(1, Directory.class);
-            return Optional.of(new File(argumentAt.getPath() + File.separator + a.getArgumentAt(0,String.class)));
+            Directory argumentAt = a.getArgument(1, Directory.class);
+            return Optional.of(new File(argumentAt.getPath() + File.separator + a.getArgument(0,String.class)));
         });
         FileRequest fileRequest = new FileRequest();
         fileRequest.setFileDTO(fileDTO);
@@ -328,11 +321,11 @@ public class DirectoryControllerTest {
     @Test
     public void shouldNotGetSingleFileSessionWrong() throws NotSupportedException, SystemException {
         doAnswer(a ->{
-            Assert.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
+            Assertions.assertTrue(a.getArguments()[0] instanceof GeneralResponseDTO);
             return null;
         }).when(responseService).error(any(),eq(401));
 
-        FileDTO fileDTO = new FileDTO(".gitignore","28-12-2018 00:15:27");
+        FileDTO fileDTO = new FileDTO(gitignoreFile.getName(),directoryController.getDateFromModDate(gitignoreFile.lastModified()));
         FileRequest fileRequest = new FileRequest();
         fileRequest.setFileDTO(fileDTO);
         fileRequest.setDirectoryDTO(DirectoryDTO.getFrom(apiKeyService.getApiKeyBySession(SESSION_TOKEN).getDirectoryList().get(0)));
@@ -342,15 +335,16 @@ public class DirectoryControllerTest {
 
     private List<FileDTO> fileDTOS(String path){
         File dir = new File(path).getAbsoluteFile();
-        Assert.assertTrue(dir.exists());
+        Assertions.assertTrue(dir.exists());
         File[] files = dir.listFiles();
         List<FileDTO> fileDTOS = new LinkedList<>();
-        fileDTOS = addAll(files,fileDTOS);
-        System.out.println("Created file list dto: " + fileDTOS.toString());
+        assert files != null;
+        addAll(files,fileDTOS);
+        System.out.println("Created file list dto: " + fileDTOS);
         return fileDTOS;
     }
 
-    private List<FileDTO> addAll(File[] files, List<FileDTO> fileDTOS){
+    private void addAll(File[] files, List<FileDTO> fileDTOS){
         for (File file : files){
             if (!file.isDirectory()){
                 long lastMod = file.lastModified();
@@ -362,7 +356,6 @@ public class DirectoryControllerTest {
                 fileDTOS.add(fileDTO);
             }
         }
-        return fileDTOS;
     }
 
     private List<Directory> generateRandomDirList(){
@@ -370,12 +363,12 @@ public class DirectoryControllerTest {
         Random random = new Random();
         int count = random.nextInt(5);
         count += 10;
-        IntStream.range(0,count).peek( p ->{
+        IntStream.range(0,count).forEach( p ->{
             Directory directory = new Directory();
             directory.setPath(RandomStringUtils.randomAlphanumeric(random.nextInt(5) + 10));
             directory.setLabel(RandomStringUtils.randomAlphabetic(random.nextInt(5) + 10));
             directoryList.add(directory);
-        }).count();
+        });
         return directoryList;
     }
     private Session getSession(String token, ApiKey apiKey){
